云文档 可以新建、自动保存文档到服务器了。

--- a/netdisk/src/main/resources/application-dev.yml
+++ b/netdisk/src/main/resources/application-dev.yml
@@ -94,7 +94,7 @@ netdisk:
   upload:
     # 大文件阈值 30MB
     big-size: 31457280
-    storage-root: C:\upload\
+    storage-root: /Users/monody/Desktop/upload/
 
 userservice:
   ribbon:
