--- a/netdisk/src/main/resources/application-prod.yml
+++ b/netdisk/src/main/resources/application-prod.yml
@@ -8,17 +8,17 @@ spring:
 
   cloud:
     nacos:
-      server-addr: 192.144.232.94:8848
+      server-addr: 127.0.0.1:8848
       discovery:
         service: netdisk
         cluster-name: localhost集群
   data:
     mongodb:
       #uri连接
-      uri: mongodb://netdisk:myaskhfas4541ds9897djlakfd4dfhfdshin123@localhost:27017/netdisk
+      uri: mongodb://localhost:27017/netdisk
 
   datasource:
-    url: jdbc:mysql://192.144.232.94:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
     username: person_working_netdisk
     password: ksdhfoihsdgdsgf34DHSGBJasf45
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -27,7 +27,7 @@ spring:
     restart:
       enabled: false
   rabbitmq:
-    host: 192.144.232.94
+    host: 127.0.0.1
     port: 5672
     username: rabbitmq_admin
     password: hjasioh444I$HDnksdn^*(5HF5DI
@@ -95,6 +95,11 @@ netdisk:
     # 大文件阈值 30MB
     big-size: 31457280
     storage-root: C:\upload\
+  edit:
+    # 编辑文件的阈值 50KB
+    big-size: 51200
+    storage-root: C:\edit\
+
 
 userservice:
   ribbon:
