--- a/netdisk/src/main/resources/bootstrap.yaml
+++ b/netdisk/src/main/resources/bootstrap.yaml
@@ -2,10 +2,10 @@ spring:
   application:
     name: userservice # 服务名称
   profiles:
-    active: prod #开发环境，这里是dev
+    active: dev #开发环境dev，生产环境prod
   cloud:
     nacos:
-      server-addr: 192.144.232.94:8848 # Nacos地址
+      server-addr: 127.0.0.1:8848 # Nacos地址
       config:
         file-extension: yaml # 文件后缀名
         enabled: false
