--- a/netdisk/src/main/resources/bootstrap.yaml
+++ b/netdisk/src/main/resources/bootstrap.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: userservice # 服务名称
   profiles:
-    active: dev #开发环境dev，生产环境prod
+    active: prod #开发环境dev，生产环境prod
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848 # Nacos地址
