--- a/user-service/src/main/resources/bootstrap.yaml
+++ b/user-service/src/main/resources/bootstrap.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: userservice # 服务名称
   profiles:
-    active: dev #开发环境，这里是dev
+    active: prod #开发环境，这里是dev
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848 # Nacos地址
