--- a/netdisk/src/main/resources/application-dev.yml
+++ b/netdisk/src/main/resources/application-dev.yml
@@ -14,14 +14,14 @@ spring:
         cluster-name: localhost集群
   data:
     mongodb:
+      # 连接方法1
       host: 127.0.0.1
       port: 27017
-      username: javaUser
-      password: password
+      username: root
+      # 密码必须用单引号引起来
+      password: '1234'
       database: netdisk
       authentication-database: admin
-
-
 
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
@@ -31,7 +31,7 @@ spring:
 
   devtools:
     restart:
-      enabled: false
+      enabled: true
   rabbitmq:
     host: 127.0.0.1
     port: 5672
