--- a/gateway/src/main/resources/bootstrap.yaml
+++ b/gateway/src/main/resources/bootstrap.yaml
@@ -5,16 +5,16 @@ spring:
     name: gateway # 服务名称
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848 # nacos地址
+      server-addr: vm.local:8848 # nacos地址
     gateway:
       routes: # 网关路由配置
         - id: userservice # 路由id，自定义，只要唯一即可
-          uri: http://127.0.0.1:8001 # 路由的目标地址 http就是固定地址
-#          uri: lb://userservice # 路由的目标地址 lb就是负载均衡，后面跟服务名称
+#          uri: http://vm.local:8001 # 路由的目标地址 http就是固定地址
+          uri: lb://userservice # 路由的目标地址 lb就是负载均衡，后面跟服务名称
           predicates: # 路由断言，也就是判断请求是否符合路由规则的条件
             - Path=/userservice/** # 这个是按照路径匹配，只要以/user/开头就符合要求
         - id: netdisk # 路由id，自定义，只要唯一即可
-          # uri: http://127.0.0.1:8081 # 路由的目标地址 http就是固定地址
+          # uri: http://vm.local:8081 # 路由的目标地址 http就是固定地址
           uri: lb://netdisk # 路由的目标地址 lb就是负载均衡，后面跟服务名称
           predicates: # 路由断言，也就是判断请求是否符合路由规则的条件
             - Path=/netdisk/** # 这个是按照路径匹配，只要以/user/开头就符合要求
@@ -25,8 +25,9 @@ spring:
           '[/**]': # 拦截一切请求
             allowedOrigins: # 允许哪些网站的跨域请求
               - "http://localhost:8080"
-              - "http://127.0.0.1:8080"
+              - "http://vm.local:8080"
               - "http://192.144.232.94:8080"
+              - "http://vm.local:8080"
               - "*"
             allowedMethods: # 允许的跨域ajax的请求方式
               - "GET"
