--- a/netdisk/src/main/resources/application-dev.yml
+++ b/netdisk/src/main/resources/application-dev.yml
@@ -8,14 +8,14 @@ spring:
 
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: vm.local:8848
       discovery:
         service: netdisk
-        cluster-name: localhost集群
+        cluster-name: localhost
   data:
     mongodb:
       # 连接方法1
-      host: 127.0.0.1
+      host: vm.local
       port: 27017
       username: root
       # 密码必须用单引号引起来
@@ -24,7 +24,7 @@ spring:
       authentication-database: admin
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://vm.local:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -33,7 +33,7 @@ spring:
     restart:
       enabled: true
   rabbitmq:
-    host: 127.0.0.1
+    host: vm.local
     port: 5672
     username: guest
     password: guest
