--- a/user-service/src/main/resources/application-dev.yml
+++ b/user-service/src/main/resources/application-dev.yml
@@ -7,10 +7,10 @@ spring:
     allow-bean-definition-overriding: true
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: vm.local:8848
       discovery:
         service: userservice
-        cluster-name: localhost集群
+        cluster-name: localhost
   devtools:
     restart:
       enabled: false
@@ -19,7 +19,7 @@ spring:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/person_working_user?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://vm.local:3306/person_working_user?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
