--- a/user-service/src/main/resources/bootstrap.yaml
+++ b/user-service/src/main/resources/bootstrap.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: userservice # 服务名称
   profiles:
-    active: prod #开发环境，这里是dev
+    active: dev #开发环境，这里是dev
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848 # Nacos地址
+      server-addr: vm.local:8848 # Nacos地址
       config:
         file-extension: yaml # 文件后缀名
