--- a/redis-api/src/main/resources/redis.properties
+++ b/redis-api/src/main/resources/redis.properties
@@ -1,6 +1,6 @@
-redis.server=192.144.232.94
+redis.server=vm.local
 redis.port=6379
-redis.auth=huihfdhuJUIGasd465DJIS%^&*sadiohj6564^156**(715315fi44IOohiohi
+redis.auth=
 
 redis.maxTotal=10
 redis.maxWaitMillis=1000
