--- a/netdisk/src/main/resources/application-dev.yml
+++ b/netdisk/src/main/resources/application-dev.yml
@@ -24,7 +24,7 @@ spring:
       authentication-database: admin
 
   datasource:
-    url: jdbc:mysql://vm.local:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://vm.local:3306/person_working_netdisk?useAffectedRows=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -101,10 +101,12 @@ netdisk:
     # 大文件阈值 3000MB
     big-size: 3145728000
     storage-root: /Users/monody/Desktop/upload/
+#    storage-root: /root/netdisk/upload/
   edit:
     # 编辑文件的阈值 5000KB
     big-size: 5120000
-    storage-root: /Users/monody/Desktop/edit/
+    storage-root: /Users/monody/Desktop/upload/edit/
+#    storage-root: /root/netdisk/upload/edit/
 
 
 userservice:
